llvm-profiler-install/debug
make[1]: Entering directory `/home/qyt/llvm-snumake/plug-in/llvm-profiler-install/lib'
make[2]: Entering directory `/home/qyt/llvm-snumake/plug-in/llvm-profiler-install/lib/Metadata'
make[2]: Nothing to be done for `all'.
make[2]: Leaving directory `/home/qyt/llvm-snumake/plug-in/llvm-profiler-install/lib/Metadata'
make[2]: Entering directory `/home/qyt/llvm-snumake/plug-in/llvm-profiler-install/lib/AliasAnalysis'
make[2]: Nothing to be done for `all'.
make[2]: Leaving directory `/home/qyt/llvm-snumake/plug-in/llvm-profiler-install/lib/AliasAnalysis'
make[2]: Entering directory `/home/qyt/llvm-snumake/plug-in/llvm-profiler-install/lib/Utilities'
make[2]: Nothing to be done for `all'.
make[2]: Leaving directory `/home/qyt/llvm-snumake/plug-in/llvm-profiler-install/lib/Utilities'
make[2]: Entering directory `/home/qyt/llvm-snumake/plug-in/llvm-profiler-install/lib/CAMP'
make[2]: Nothing to be done for `all'.
make[2]: Leaving directory `/home/qyt/llvm-snumake/plug-in/llvm-profiler-install/lib/CAMP'
make[2]: Entering directory `/home/qyt/llvm-snumake/plug-in/llvm-profiler-install/lib/ObjTrace'
make[2]: Nothing to be done for `all'.
make[2]: Leaving directory `/home/qyt/llvm-snumake/plug-in/llvm-profiler-install/lib/ObjTrace'
make[2]: Entering directory `/home/qyt/llvm-snumake/plug-in/llvm-profiler-install/lib/Qprofiler'
make[2]: Nothing to be done for `all'.
make[2]: Leaving directory `/home/qyt/llvm-snumake/plug-in/llvm-profiler-install/lib/Qprofiler'
make[1]: Leaving directory `/home/qyt/llvm-snumake/plug-in/llvm-profiler-install/lib'
make[1]: Entering directory `/home/qyt/llvm-snumake/plug-in/llvm-profiler-install/tools'
make[2]: Entering directory `/home/qyt/llvm-snumake/plug-in/llvm-profiler-install/tools/camp'
make[2]: Nothing to be done for `all'.
make[2]: Leaving directory `/home/qyt/llvm-snumake/plug-in/llvm-profiler-install/tools/camp'
make[2]: Entering directory `/home/qyt/llvm-snumake/plug-in/llvm-profiler-install/tools/campSampling'
make[2]: Nothing to be done for `all'.
make[2]: Leaving directory `/home/qyt/llvm-snumake/plug-in/llvm-profiler-install/tools/campSampling'
make[2]: Entering directory `/home/qyt/llvm-snumake/plug-in/llvm-profiler-install/tools/objtrace'
make[2]: Nothing to be done for `all'.
make[2]: Leaving directory `/home/qyt/llvm-snumake/plug-in/llvm-profiler-install/tools/objtrace'
make[2]: Entering directory `/home/qyt/llvm-snumake/plug-in/llvm-profiler-install/tools/Qprofiler'
llvm[2]: Compiling Qprofiler.cpp for Debug+Asserts build (PIC)
/home/qyt/llvm-snumake/plug-in/llvm-profiler/tools/Qprofiler/Qprofiler.cpp:91:22: error: use of undeclared identifier 'mergetstack'; did you mean 'mergestack'?
        if(mergestack[0] || mergetstack[1])
                            ^~~~~~~~~~~
                            mergestack
/home/qyt/llvm-snumake/plug-in/llvm-profiler/tools/Qprofiler/Qprofiler.cpp:41:18: note: 'mergestack' declared here
static uint32_t *mergestack;
                 ^
/home/qyt/llvm-snumake/plug-in/llvm-profiler/tools/Qprofiler/Qprofiler.cpp:117:14: error: use of undeclared identifier 'c'
                merged_arr[c].ctxid_array[0]=mergestack[0];
                           ^
/home/qyt/llvm-snumake/plug-in/llvm-profiler/tools/Qprofiler/Qprofiler.cpp:118:14: error: use of undeclared identifier 'c'
                merged_arr[c].ctxid_array[1]=mergestack[2];
                           ^
/home/qyt/llvm-snumake/plug-in/llvm-profiler/tools/Qprofiler/Qprofiler.cpp:123:23: error: use of undeclared identifier 'c'
                                strcat(merged_arr[c].merged_objcount,instr[i].objcount);
                                                  ^
/home/qyt/llvm-snumake/plug-in/llvm-profiler/tools/Qprofiler/Qprofiler.cpp:140:20: error: no member named 'ctxid_arr' in '_MERGED_STACK'; did you mean 'ctxid_array'?
                if(merged_arr[a].ctxid_arr[0]==ctx || merged_arr[a].ctxid_arr[1]==ctx)
                                 ^~~~~~~~~
                                 ctxid_array
/home/qyt/llvm-snumake/plug-in/llvm-profiler/tools/Qprofiler/Qprofiler.h:32:11: note: 'ctxid_array' declared here
        uint32_t ctxid_array[2];
                 ^
/home/qyt/llvm-snumake/plug-in/llvm-profiler/tools/Qprofiler/Qprofiler.cpp:140:55: error: no member named 'ctxid_arr' in '_MERGED_STACK'; did you mean 'ctxid_array'?
                if(merged_arr[a].ctxid_arr[0]==ctx || merged_arr[a].ctxid_arr[1]==ctx)
                                                                    ^~~~~~~~~
                                                                    ctxid_array
/home/qyt/llvm-snumake/plug-in/llvm-profiler/tools/Qprofiler/Qprofiler.h:32:11: note: 'ctxid_array' declared here
        uint32_t ctxid_array[2];
                 ^
In file included from /home/qyt/llvm-snumake/plug-in/llvm-profiler/tools/Qprofiler/Qprofiler.cpp:16:
/home/qyt/llvm-snumake/plug-in/llvm-profiler/tools/Qprofiler/x86timer.hpp:56:10: warning: private field 'fstart' is not used [-Wunused-private-field]
uint64_t fstart,fend;
         ^
/home/qyt/llvm-snumake/plug-in/llvm-profiler/tools/Qprofiler/x86timer.hpp:56:17: warning: private field 'fend' is not used [-Wunused-private-field]
uint64_t fstart,fend;
                ^
2 warnings and 6 errors generated.
make[2]: *** [/home/qyt/llvm-snumake/plug-in/llvm-profiler-install/tools/Qprofiler/Debug+Asserts/Qprofiler.o] Error 1
make[2]: Leaving directory `/home/qyt/llvm-snumake/plug-in/llvm-profiler-install/tools/Qprofiler'
make[1]: *** [all] Error 1
make[1]: Leaving directory `/home/qyt/llvm-snumake/plug-in/llvm-profiler-install/tools'
make: *** [all] Error 1
